--- a/src/index.css
+++ b/src/index.css
@@ -58,10 +58,15 @@
   font-family: 'Pretendard', Verdana, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif !important;
 }
 
+#root {
+  padding-top: 70px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 .swal2-container .swal2-popup {
   padding-bottom: 3em;
   border-radius: 30px;
