Design. header 형제 요소 padding 수정

--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,8 @@
   font-family: 'Pretendard', Verdana, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif !important;
 }
 
-#root {
+.header-layout + * {
   padding-top: 70px;
-}
-
-#root.no-header {
-  padding-top: 0px;
 }
 
 a {
