Design. 헤더 z-index, 지도 미국 영문 수정

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ a {
   color: inherit;
 }
 
+:where(.css-dev-only-do-not-override-byeoj0).ant-drawer {
+  z-index: 9999;
+}
+
 .swal2-container .swal2-popup {
   padding-bottom: 3em;
   border-radius: 30px;
